syntax = "proto3";

package config.model;
option go_package = "github.com/apptreesoftware/protoc-gen-twirp_dart/example/go/config/model";


import "google/protobuf/timestamp.proto";

// A Hat is a piece of headwear made by a Haberdasher.
message Hat {
    // The size of a hat should always be in inches.
    int32 size = 1;

    // The color of a hat will never be 'invisible', but other than
    // that, anything is fair game.
    string color = 2;

    // The name of a hat is it's type. Like, 'bowler', or something.
    string name = 3;

    google.protobuf.Timestamp created_on = 4;

    Color rgbColor = 5;

    repeated Size availableSizes = 6;

    repeated int32 roles = 7;

    map<string, int64> dictionary = 8;
    map<string, Size> dictionaryWithMessage = 9;
}

message Color {
    int32 red = 1;
    int32 green = 2;
    int32 blue = 3;
}

message Receipt {
    double total = 1;
}
// Size is passed when requesting a new hat to be made. It's always
// measured in inches.
message Size {
    int32 inches = 1;
}